The client and server runtimes are now java module (JPMS)